Fix subtle font clipping in Admin Chronograf table headers

--- a/ui/src/style/pages/admin.scss
+++ b/ui/src/style/pages/admin.scss
@@ -47,7 +47,7 @@
     font-size: 17px;
     font-weight: 400 !important;
     color: $g12-forge;
-    padding: 0;
+    padding: 6px 0;
   }
   .panel-body {min-height: 300px;}
   .panel-heading + .panel-body {padding-top: 0;}
